prometheus-metric-storage/tests/compile_fail/missing_help.stderr
error: metric help message is required, consider adding a docstring
 --> tests/compile_fail/missing_help.rs:5:5
  |
5 |     counter: prometheus::IntCounter,
  |     ^^^^^^^
